# kakashi

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
Astro/: bot.py
Astro/cogs/: __init__.py
database/: prefixes.db
kakashi/: __init__.py  __main__.py  bot.py  exts.py
kakashi/cogs/: __init__.py  configs.py  dev.py  fun.py  general.py  helpcmd.py  info.py  utilities.py  utlities.py  welcomer.py
kakashi/core/: bot.py  exts.py
kakashi/exts/: __init__.py  db_handler.py  hex.py
kakashi/helpers/: __init__.py  custom_hex.py  db_handler.py  embed_helper.py  helpcmd.py
kakashi/plugins/: automation.py  botmiscs.py  events.py  fun.py  help.py  info.py  reaction_roles.py
src/core/: bot.py
src/database/: prefix.py  welcome.py
src/extensions/: general.py
veloc1ty/: bot.py
veloc1ty/cogs/: configs.py  general.py  utlities.py  welcomer.py
